# HollyJolly

./: .gitignore  .gitmodules  CMakeLists.txt  HollyJolly.code-workspace  Readme.md
hw/ver1/: HollyJollyV1.kicad_pcb  HollyJollyV1.kicad_prl  HollyJollyV1.kicad_pro  HollyJollyV1.kicad_sch  HollyJollyV1.kicad_sch-bak  design_notes.md  fp-info-cache  fp-lib-table  ws2812.kicad_sch
hw/ver1/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: CMakeLists.txt  animator.cpp  animator.hpp  animator_private.hpp  blink.c  buttons.cpp  buttons.hpp  holly_jolly_cfg.hpp  main.cpp  ws2812.cpp  ws2812.hpp  ws2812.pio
src/animations/: full_sweep_color_block.cpp  idle.cpp  soft_glow.cpp  twinkle.cpp
